--- a/csv_discover/templates/main_template.html
+++ b/csv_discover/templates/main_template.html
@@ -7,8 +7,11 @@
 </head>
 <body>
 <div class="container">
-{% block index %}
-{% endblock %}
+    {% block index %}
+    {% endblock %}
+
+    {% block aggregate_table %}
+    {% endblock %}
 </div>
 </body>
 </html>
