--- a/csv_discover/templates/aggregate_table.html
+++ b/csv_discover/templates/aggregate_table.html
@@ -1,5 +1,7 @@
 {% extends 'main_template.html' %}
 
+{% block title %}aggregate table{% endblock %}
+
 {% block aggregate_table %}
 {{ result }}
 {% endblock %}
